--- a/manifest.json
+++ b/manifest.json
@@ -15,7 +15,7 @@
     }
   ],
   "web_accessible_resources": [{
-    "resources": ["content-styles.css"],
+    "resources": ["content-styles.css", "fonts/*"],
     "matches": ["<all_urls>"]
   }],
   "background": {
