feat: 支援在Google Slides和Google Docs上讀取選取的文字並顯示按鈕
1. 修改 content.js：
    - 新增對 window.location.hostname 的檢查，確保僅在 docs.google.com 和 slides.google.com 執行腳本。
    - 在符合條件時，動態創建並注入腳本 'google-docs-inject.js'。
    - 監聽 'message' 事件，根據來自頁面的數據類型進行相應的處理。
    - 移除原有的 'mouseup' 事件監聽器。

2. 新增 google-docs-inject.js：
    - 創建並顯示一個浮動按鈕，當用戶選取文本時顯示按鈕。
    - 當按鈕被點擊時，處理選取的文本並發送消息至主頁面。
    - 新增功能以根據選取的文本計算字數並顯示結果。

3. 修改 manifest.json：
    - 新增對 'scripting' 權限的要求，以支援動態腳本注入。
    - 新增 'host_permissions' 來支援 docs.google.com。
    - 更新 'web_accessible_resources' 以包括 google-slides-inject.js 和 google-docs-inject.js。

--- a/manifest.json
+++ b/manifest.json
@@ -3,9 +3,10 @@
   "name": "文字校正與比較工具",
   "version": "1.0",
   "description": "校正選中的文字並顯示比較結果",
-  "permissions": ["activeTab", "storage"],
+  "permissions": ["activeTab", "storage", "scripting"],
   "host_permissions": [
-    "https://api.openai.com/*"
+    "https://api.openai.com/*",
+    "https://docs.google.com/*"
   ],
   "content_scripts": [
     {
@@ -15,7 +16,7 @@
     }
   ],
   "web_accessible_resources": [{
-    "resources": ["content-styles.css", "fonts/*"],
+    "resources": ["content-styles.css", "fonts/*", "google-slides-inject.js", "google-docs-inject.js"],
     "matches": ["<all_urls>"]
   }],
   "background": {
